--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  cursor: url("/img/cursors.svg"), auto;
+  cursor: url("./img/cursors.svg"), auto;
 }
 
 html, body {
@@ -66,7 +66,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  cursor: url("/img/cursor-pointer.svg"), auto;
+  cursor: url("./img/cursor-pointer.svg"), auto;
   border: none;
   font-size: 1vw;
   color: #fff;
@@ -85,7 +85,7 @@ main {
   transition: transform 0.5s ease;
   z-index: 9;
   pointer-events: none;
-  cursor: url("/img/cursor-pointer.svg"), auto;
+  cursor: url("./img/cursor-pointer.svg"), auto;
 }
 
 .menu.open {
@@ -137,7 +137,7 @@ main {
   font-family: 'Fugue';
   text-decoration: none;
   transition: opacity 0.2s;
-  cursor: url("/img/cursor-pointer.svg"), auto;
+  cursor: url("./img/cursor-pointer.svg"), auto;
 }
 
 .menu-list a:hover {
@@ -231,7 +231,7 @@ footer {
 
 .logo {
   margin: 4vw 0 0 3vw;
-  background-image: url(/img/logo.svg);
+  background-image: url(./img/logo.svg);
   background-repeat: no-repeat;
 }
 
@@ -254,6 +254,6 @@ footer {
 .qr {
   width: 10vw;
   height: 10vw;
-  background-image: url(/img/qr.svg);
+  background-image: url(./img/qr.svg);
   background-repeat: no-repeat;
 }
