--- a/css/index.css
+++ b/css/index.css
@@ -231,7 +231,7 @@ footer {
 
 .logo {
   margin: 4vw 0 0 3vw;
-  background-image: url("./img/logo.svg)";
+  background-image: url("../img/logo.svg)";
   background-repeat: no-repeat;
 }
 
